[package]
name = "sample-crank"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
axum = "0.4.8"
tower-http = { version = "0.2.0", features = ["cors"] }
tower = "0.4.11"
axum-debug = "0.3.2"
tokio = { version = "1.13.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.70"
tracing = "0.1.29"
tracing-subscriber = "0.3"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "time", "tls"] }