[package]
name = "lending-controller"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_controller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
recurring = { path = "../recurring", features = ["cpi"] }
jet = { git = "https://github.com/jet-lab/jet-v1", version = "0.2.0", features=["no-entrypoint", "cpi"] }